--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,9 @@ body {
     letter-spacing: 0.02em;
 }
 
+
 /* logo style */
+
 .logo {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
@@ -49,6 +51,7 @@ body {
     color: var(--accent-color);
 }
 
+
 /* link */
 
 .link {
@@ -65,7 +68,9 @@ body {
     color: var(--secondary-color);
 }
 
+
 /* headers */
+
 .header {
     color: var(--secondary-color);
 }
@@ -81,13 +86,17 @@ body {
     line-height: 1.2;
 }
 
+
 /* nav menu */
+
 .navigation,
 .list {
     list-style-type: none;
 }
 
+
 /* hero section */
+
 .hero {
     background-color: var(--secondary-color);
     text-align: center;
@@ -100,8 +109,10 @@ body {
     line-height: 1.07;
 }
 
+
 /* content section */
-.content-block h2 {
+
+.section-header {
     color: var(--secondary-color);
     font-weight: 600;
     font-size: 36px;
@@ -115,6 +126,7 @@ body {
 
 
 /* list classes */
+
 .list.team{
     background-color: var(--primary-color);
     text-align: center;
@@ -128,9 +140,6 @@ body {
     background-color: var(--primary-color);
 }
 
-.list-box > h3 {
-    color: var(--text-color);
-}
 
 /* portfolio gallery */
 
@@ -146,6 +155,7 @@ body {
 
 
 /* buttons */
+
 .order-button {
     cursor: pointer;
     background-color: var(--accent-color);
@@ -173,7 +183,9 @@ body {
     background-color: var(--accent-color);
 }
 
+
 /* footer */
+
 .footer {
     background-color: var(--secondary-color);
     color: var(--third-text-color);
