--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
 .logo {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 800;
     line-height: 1.3;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
@@ -66,6 +66,9 @@ body {
 
 .nav-link {
     color: var(--secondary-color);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 
@@ -73,6 +76,8 @@ body {
 
 .header {
     color: var(--secondary-color);
+    font-weight: 600;
+    
 }
 
 .section-header {
@@ -164,6 +169,10 @@ body {
     border-radius: 4px;
     width: 170px;
     height: 51px;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.04em;
+    
 }
 
 .order-button:hover,
