--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 --secondary-color: #2E2F42;
 --text-color: #434455;
 --secondary-text-color: #F4F4FD;
---third-text-color: #E7E9FC;
 --accent-color: #4D5AE5;
+--secondary-accent-color: #E7E9FC;
 */
 
 :root {
@@ -12,8 +12,8 @@
     --secondary-color: #2E2F42;
     --text-color: #434455;
     --secondary-text-color: #F4F4FD;
-    --third-text-color: #E7E9FC;
     --accent-color: #4D5AE5;
+    --secondary-accent-color: #E7E9FC;
 }
 
 /* 
@@ -23,14 +23,13 @@
 */
 
 body {
-    background-color: #ffffff;
+    background-color: var(--primary-color);
     font-family: 'Roboto', sans-serif;
     color: var(--text-color);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
 
 /* logo style */
 
@@ -41,6 +40,7 @@ body {
     line-height: 1.3;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+    text-decoration: none;
 }
 
 .logo.footer {
@@ -61,7 +61,7 @@ body {
 
 .link:hover,
 .link:focus {
-    color: var(--accent-color);
+    color: var(--text-color);
 }
 
 .nav-link {
@@ -70,6 +70,13 @@ body {
     font-size: 16px;
     line-height: 1.5;
 }
+
+.contact.link:hover,
+.contact.link:focus {
+    color: var(--accent-color);
+}
+
+
 
 
 /* headers */
@@ -89,6 +96,17 @@ body {
 .list.header {
     font-size: 20px;
     line-height: 1.2;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 
@@ -153,12 +171,6 @@ body {
     color: var(--text-color);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
-    color: var(--accent-color);
-}
-
-
 /* buttons */
 
 .order-button {
@@ -169,6 +181,8 @@ body {
     border-radius: 4px;
     width: 170px;
     height: 51px;
+    font-family: inherit; /*important*/
+    font-weight: 600;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.04em;
@@ -177,18 +191,23 @@ body {
 
 .order-button:hover,
 .order-button:focus {
-    background-color: var(--primary-color);
-    color: var(--accent-color);
+    background-color: var(--accent-color);
+    color: var(--primary-color);
 }
 
 .filter-button {
     color: var(--accent-color);
     background-color: var(--secondary-text-color);
+    border-style: none;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    line-height: 1.28;
 }
 
 .filter-button:hover,
 .filter-button:focus {
-    color: var(--secondary-color);
+    color: var(--secondary-text-color);
     background-color: var(--accent-color);
 }
 
@@ -197,5 +216,5 @@ body {
 
 .footer {
     background-color: var(--secondary-color);
-    color: var(--third-text-color);
+    color: var(--secondary-accent-color);
 }
