--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
 
 .link:hover,
 .link:focus {
-    color: var(--text-color);
+    color: var(--accent-color);
 }
 
 .nav-link {
@@ -74,6 +74,12 @@ body {
     line-height: 1.5;
 }
 
+.nav-link:hover,
+.nav-link:focus {
+    color: var(--text-color);
+}
+
+.nav-link:active,
 .contact.link:hover,
 .contact.link:focus {
     color: var(--accent-color);
@@ -204,6 +210,10 @@ body {
     color: var(--primary-color);
 }
 
+.order-button:active {
+    background-color: #404BBF;
+}
+
 .filter-button {
     color: var(--accent-color);
     background-color: var(--secondary-text-color);
@@ -211,6 +221,7 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-family: inherit;
+    font-weight: 600;
     font-size: 16px;
     line-height: 1.28;
 }
